--- a/3_Expenses app/2_styles.css
+++ b/3_Expenses app/2_styles.css
@@ -1,13 +1,59 @@
 .body {
     font-family: 'Manrope';
 }
+h2 {
+    font-family: 'Manrope';
+    margin-top: 50px;
+    margin-left: 50px;
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 700;
+    width: 500px;
+}
 .row {
     display: flex;
     gap: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+.leftSide {
+    width: 250px;
+}
+.rightSide {
+    width: 250px;
+}
+.user_input{
+    width: 250px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+.p_bold {
+    font-family: 'Manrope';
+    margin-top: 30px;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 700;
+    width: 500px;
+}
+.p_light {
+    font-weight: 400;
 }
 .status_green {
     color: green;
 }
 .status_red {
     color: red;
+}
+.add_btn{
+    width: 200px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 1px solid #0094FF;
+    background-color: #0094FF;
+    color: white;
+    font-family: 'Manrope';
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 400;
 }
