--- a/3_Expenses app/2_styles.css
+++ b/3_Expenses app/2_styles.css
@@ -28,6 +28,13 @@ h2 {
     box-sizing: border-box;
     border: 1px solid black;
 }
+.categorySelect {
+    margin-top: 20px;
+    width: 250px;
+    height: 50px;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
 .p_bold {
     font-family: 'Manrope';
     margin-top: 30px;
@@ -78,4 +85,9 @@ h2 {
     line-height: 32px;
     font-weight: 400;
     width: 500px;
+}
+.limitBtn {
+    display: inline;
+    width: 20px;
+    height: 20px;
 }
