--- a/4_Movie app/2_styles.css
+++ b/4_Movie app/2_styles.css
@@ -26,3 +26,48 @@ body {
 .tag:last-child {
     margin-left: 5px;
 }
+h2 {
+    margin-top: 20px;
+    margin-left: 73px;
+    line-height: 88px;
+    font-size: 88px;
+    font-weight: 400;
+}
+.listOfFilms {
+    margin-top: 45px;
+    box-sizing: border-box;
+    padding: 70px;
+    width: 930px;
+    height: 500px;
+    background-color: #232323;
+    border-radius: 20px;
+}
+.inputArea {
+    display: flex;
+    gap: 20px;
+}
+.input_css {
+    width: 400px;
+    height: 62px;
+    box-sizing: border-box;
+    background-color: #232323;
+    border: none;
+    box-shadow: 0px 1px 0px 0px gray;
+}
+.input_css::placeholder {
+    color: #F3F6F9;
+    font-size: 21px;
+    opacity: 50%;
+}
+.inputBtn_css {
+    width: 62px;
+    height: 62px;
+    border: 1px solid #6532F8;
+    box-sizing: border-box;
+    background-color: #6532F8;
+    border-radius: 31px;
+    background-image: url('Vector.png');
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
