--- a/4_Movie app/2_styles.css
+++ b/4_Movie app/2_styles.css
@@ -72,5 +72,33 @@ h2 {
     background-position: 50%;
 }
 ol, ul {
-    list-style: circle;
+    list-style: none;
+}
+.list_string {
+    margin-top: 3px;
+    padding-left: 20px;
+    width: 790px;
+    height: 71px;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #3A3939;
+}
+.string {
+    color: #F3F6F9;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 400;
+}
+.string::before {
+    margin-top: 27px;
+    margin-right: 20px;
+    content: '';
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    background-image: url('Rectangle\ 814.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
 }
